# llm-cli-v2

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  build.sh  llm.cpp
.zed/: debug.json
DEVNOTES/: openapi.yaml  webhook-triggers.md
